--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://www.mediafire.com/file/p6fwg6sv525karh/Roblox_Arceus_X_NEO_1.6.9.apk/file" class="download-button">Download</a>
+          <a href="https://i-n.tech/?p=71440" class="download-button">Download</a>
                   </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
