--- a/index.html
+++ b/index.html
@@ -188,47 +188,46 @@
     <section class="section">
       <div class="grid">
         <div class="card">
-          <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
-          <h3>Delta Executor</h3>
-          <p>Executor atualizado e estável, ideal para scripts Roblox.</p>
-          <a href="https://www.mediafire.com/file/x8kaova1oq5eo2q/Delta-2.673.713.apk" class="download-button">Download</a>
-        </div>
-        <div class="card">
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.mediafire.com/file/nw4mnufljmk5pdf/krnl_release_2.673.710_2025.5.30_28.apk/file" class="download-button">Download</a>
+          <a href="https://i-n.tech/?p=71460" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/cbL3hla.png" alt="Trigon" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
-          <a href="https://www.mediafire.com/file/z542j1lflbvoiqw/Trigon_2.673.17.apk/file" class="download-button">Download</a>
+          <a href="https://i-n.tech/?p=71450" class="download-button">Download</a>
         </div>
-        <div class="card">
-          <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
-          <h3>KRNL Executor</h3>
-          <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.mediafire.com/file/nw4mnufljmk5pdf/krnl_release_2.673.710_2025.5.30_28.apk/file" class="download-button">Download</a>
-          </div>
         <div class="card">
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://www.mediafire.com/file/v4fiout63ecz33w/Codex+v2.673+AC+Bypass.apk/file" class="download-button">Download</a>
+          <a href="https://i-n.tech/?p=71445" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
           <a href="https://i-n.tech/?p=71440" class="download-button">Download</a>
-                  </div>
+        </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
-          <h3>KRNL Executor</h3>
-          <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.mediafire.com/file/jfnzjk255uryuj3/Vega_X_2.673.1715.apk/file" class="download-button">Download</a>
-          </div>
+          <h3>Vega X</h3>
+          <p>Executor com interface moderna e recursos avançados para scripts.</p>
+          <a href="https://i-n.tech/?p=71465" class="download-button">Download</a>
+        </div>
+        <div class="card">
+          <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
+          <h3>Evon Executor</h3>
+          <p>Executor poderoso com interface intuitiva e suporte a scripts avançados.</p>
+          <a href="https://i-n.tech/?p=71470" class="download-button">Download</a>
+        </div>
+        <div class="card">
+          <img src="https://i.imgur.com/Org2fLu.png" alt="Frostware Executor" />
+          <h3>Frostware Executor</h3>
+          <p>Executor estável com recursos exclusivos para melhor desempenho.</p>
+          <a href="https://i-n.tech/?p=71455" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -291,4 +290,4 @@
   </footer>
 
 </body>
-</html>
+  </html>
