--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
           <a href="https://i-n.tech/?p=71460" class="download-button">Download</a>
         </div>
         <div class="card">
-          <img src="https://i.imgur.com/cbL3hla.png" alt="Trigon" />
+          <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
           <a href="https://i-n.tech/?p=71450" class="download-button">Download</a>
@@ -290,4 +290,4 @@
   </footer>
 
 </body>
-  </html>
+</html>
