--- a/index.html
+++ b/index.html
@@ -188,6 +188,12 @@
     <section class="section">
       <div class="grid">
         <div class="card">
+          <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
+          <h3>Delta Executor</h3>
+          <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
+          <a href="https://i-n.tech/?p=71675" class="download-button">Download</a>
+        </div>
+        <div class="card">
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
@@ -285,7 +291,7 @@
   </main>
 
   <footer>
-    <p>&copy; 2025 JINX Scripts - Todos os direitos reservados.</p>
+    <p>© 2025 JINX Scripts - Todos os direitos reservados.</p>
     <p>Criado com ❤️ pelo DRKscripts</p>
   </footer>
 
