--- a/index.html
+++ b/index.html
@@ -138,6 +138,8 @@
     .card:nth-child(7) { --i: 7; }
     .card:nth-child(8) { --i: 8; }
     .card:nth-child(9) { --i: 9; }
+    .card:nth-child(10) { --i: 10; }
+    .card:nth-child(11) { --i: 11; }
 
     .card:hover {
       transform: translateY(-10px);
@@ -321,7 +323,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://i-n.tech/?p=73098" class="download-button">Download</a>
+          <a href="https://i-n.tech/?p=72855" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -345,7 +347,7 @@
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://i-n.tech/?p=72860" class="download-button">Download</a>
+          <a href="https://i-n.tech/?p=73830" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
@@ -370,6 +372,18 @@
           <h3>Frostware Executor</h3>
           <p>Executor estável com recursos exclusivos para melhor desempenho.</p>
           <a href="https://i-n.tech/?p=71455" class="download-button">Download</a>
+        </div>
+        <div class="card">
+          <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
+          <h3>Trigon Executor</h3>
+          <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
+          <a href="https://i-n.tech/?p=73820" class="download-button">Download</a>
+        </div>
+        <div class="card">
+          <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
+          <h3>Cryptic Executor</h3>
+          <p>Executor seguro com recursos otimizados para execução de scripts em vários jogos.</p>
+          <a href="https://i-n.tech/?p=73825" class="download-button">Download</a>
         </div>
       </div>
     </section>
