--- a/index.html
+++ b/index.html
@@ -310,6 +310,7 @@
   <nav class="navbar">
     <button class="tab-button active" onclick="showSection('executors')">Executores</button>
     <button class="tab-button" onclick="showSection('executors-lite')">Executores Lite</button>
+    <button class="tab-button" onclick="showSection('executors-vng')">Executores VNG</button>
     <button class="tab-button" onclick="showSection('scripts')">Scripts</button>
   </nav>
 
@@ -426,6 +427,32 @@
       </div>
     </section>
 
+    <section id="executors-vng" class="section">
+      <header>
+        <h1>EXECUTORES VNG</h1>
+      </header>
+      <div class="grid">
+        <div class="card">
+          <img src="https://i.imgur.com/oF9fVcQ.png" alt="Krnl VNG Executor" />
+          <h3>Krnl VNG</h3>
+          <p>Versão VNG do Krnl, otimizada para scripts avançados e múltiplos jogos.</p>
+          <a href="https://i-n.tech/?p=73284" class="download-button">Download</a>
+        </div>
+        <div class="card">
+          <img src="https://i.imgur.com/jLNGand.png" alt="Arceus X VNG Executor" />
+          <h3>Arceus X VNG</h3>
+          <p>Executor VNG do Arceus X, ideal para dispositivos móveis com suporte a scripts .lua.</p>
+          <a href="https://i-n.tech/?p=73294" class="download-button">Download</a>
+        </div>
+        <div class="card">
+          <img src="https://i.imgur.com/OikoYqu.png" alt="Cryptic VNG Executor" />
+          <h3>Cryptic VNG</h3>
+          <p>Versão VNG do Cryptic, segura e otimizada para execução de scripts complexos.</p>
+          <a href="https://i-n.tech/?p=73279" class="download-button">Download</a>
+        </div>
+      </div>
+    </section>
+
     <section id="scripts" class="section">
       <header>
         <h1>SCRIPTS</h1>
@@ -502,4 +529,4 @@
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
-  </html>
+            </html>
