--- a/index.html
+++ b/index.html
@@ -324,25 +324,25 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://i-n.tech/?p=72855" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-9693/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
           <h3>Ronix Executor</h3>
           <p>Executor atualizado com suporte robusto para scripts e desempenho otimizado.</p>
-          <a href="https://i-n.tech/?p=72890" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-2523/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://i-n.tech/?p=72865" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-3323/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
-          <a href="https://i-n.tech/?p=71450" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-2048/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
@@ -354,13 +354,13 @@
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://i-n.tech/?p=72885" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-4712/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
           <h3>Vega X</h3>
           <p>Executor com interface moderna e recursos avançados para scripts.</p>
-          <a href="https://i-n.tech/?p=72870" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-5375/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
@@ -378,7 +378,7 @@
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
           <h3>Trigon Executor</h3>
           <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
-          <a href="https://i-n.tech/?p=73820" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-2700/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
