--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-9693/" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-8937/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -342,7 +342,7 @@
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-2048/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/nhcpup5d7cde0pa/Fluxus.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
@@ -354,7 +354,7 @@
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-4712/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/b3mn7i3y9yi23q0/Roblox_Arceus_X_NEO_1.7.3.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
@@ -416,7 +416,7 @@
           <img src="https://i.imgur.com/ESRQ81S.png" alt="Krnl Lite Executor" />
           <h3>Krnl Lite</h3>
           <p>Versão simplificada do Krnl, ideal para dispositivos com menor capacidade de processamento.</p>
-          <a href="https://i-n.tech/?p=71810" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/5jd37io59zoe8h0/Krnl_Super_Lite_CK_v679.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/b6wRgCZ.png" alt="Frostware Lite Executor" />
