--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
-          <a href="https://www.mediafire.com/file/nhcpup5d7cde0pa/Fluxus.apk/file" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-6505/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
@@ -354,7 +354,7 @@
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://www.mediafire.com/file/b3mn7i3y9yi23q0/Roblox_Arceus_X_NEO_1.7.3.apk/file" class="download-button">Download</a>
+          <a href="https://techbotal.com/destrua-se-roblox-9947/" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
@@ -529,4 +529,4 @@
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
-  </html>
+            </html>
