--- a/index.html
+++ b/index.html
@@ -310,7 +310,6 @@
   <nav class="navbar">
     <button class="tab-button active" onclick="showSection('executors')">Executores</button>
     <button class="tab-button" onclick="showSection('executors-lite')">Executores Lite</button>
-    <button class="tab-button" onclick="showSection('executors-vng')">Executores VNG</button>
     <button class="tab-button" onclick="showSection('scripts')">Scripts</button>
   </nav>
 
@@ -324,67 +323,67 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-8937/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/dczslp3jffolfna/Delta-2.679.762.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
           <h3>Ronix Executor</h3>
           <p>Executor atualizado com suporte robusto para scripts e desempenho otimizado.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-2523/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/5axrhhnx1aa43fm/Ronix_679.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-3323/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/68rvz85r634ptuo/krnl_release_2.679.762_2025.6.29_34.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-6505/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/ggqgzs7jakeasdt/Fluxus.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://i-n.tech/?p=73830" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/64o0d41dowb7cef/Codex_2.679.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-9947/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/b3mn7i3y9yi23q0/Roblox_Arceus_X_NEO_1.7.3.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
           <h3>Vega X</h3>
           <p>Executor com interface moderna e recursos avançados para scripts.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-5375/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/0pjjqca7vzju1qp/Vega_X_2.679.762.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
           <h3>Evon Executor</h3>
           <p>Executor poderoso com interface intuitiva e suporte a scripts avançados.</p>
-          <a href="https://i-n.tech/?p=72147" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/yk3aq47d5wxcxtn/Evon.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Org2fLu.png" alt="Frostware Executor" />
           <h3>Frostware Executor</h3>
           <p>Executor estável com recursos exclusivos para melhor desempenho.</p>
-          <a href="https://i-n.tech/?p=71455" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/kkpieek0eupp21w/Frostware-GenX+V3.3.apk/file?hash=WkX7rDRhhD3c7hMuKO5juIzWQDMKod3fQhpniZPUEhS7D6jX5r6QJLqG6tTQ77UP" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
           <h3>Trigon Executor</h3>
           <p>Executor avançado com suporte para scripts complexos e interface amigável.</p>
-          <a href="https://techbotal.com/destrua-se-roblox-2700/" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/gzf3ji8b6iewf3f/Trigon_2.679.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
           <h3>Cryptic Executor</h3>
           <p>Executor seguro com recursos otimizados para execução de scripts em vários jogos.</p>
-          <a href="https://i-n.tech/?p=73825" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/t9x52nxbu3z0gtw/Cryptic_2.679.762_APK.apk/file" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -398,57 +397,31 @@
           <img src="https://i.imgur.com/HzKgECg.png" alt="Delta Lite Executor" />
           <h3>Delta Lite</h3>
           <p>Versão leve do Delta Executor, ideal para dispositivos com menos recursos.</p>
-          <a href="https://i-n.tech/?p=71820" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/folder/8r62cbyw5i142/DELTA+LITE" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/jfujlYl.png" alt="Fluxus Lite Executor" />
           <h3>Fluxus Lite</h3>
           <p>Executor leve para Android, otimizado para desempenho em dispositivos básicos.</p>
-          <a href="https://i-n.tech/?p=71815" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/folder/p6h81na49oxau/Fluxus+lite" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/DPL0Ztw.png" alt="Evon Lite Executor" />
           <h3>Evon Lite</h3>
           <p>Versão leve do Evon Executor, otimizada para desempenho em dispositivos com recursos limitados.</p>
-          <a href="https://i-n.tech/?p=71805" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/folder/curxkmp7949je/EVON+LITE" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/ESRQ81S.png" alt="Krnl Lite Executor" />
           <h3>Krnl Lite</h3>
           <p>Versão simplificada do Krnl, ideal para dispositivos com menor capacidade de processamento.</p>
-          <a href="https://www.mediafire.com/file/5jd37io59zoe8h0/Krnl_Super_Lite_CK_v679.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/folder/ae78c0q5oabze/KRNL+LITE" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/b6wRgCZ.png" alt="Frostware Lite Executor" />
           <h3>Frostware Lite</h3>
           <p>Versão leve do Frostware, projetada para oferecer estabilidade em dispositivos básicos.</p>
-          <a href="https://i-n.tech/?p=71800" class="download-button">Download</a>
-        </div>
-      </div>
-    </section>
-
-    <section id="executors-vng" class="section">
-      <header>
-        <h1>EXECUTORES VNG</h1>
-      </header>
-      <div class="grid">
-        <div class="card">
-          <img src="https://i.imgur.com/oF9fVcQ.png" alt="Krnl VNG Executor" />
-          <h3>Krnl VNG</h3>
-          <p>Versão VNG do Krnl, otimizada para scripts avançados e múltiplos jogos.</p>
-          <a href="https://i-n.tech/?p=73284" class="download-button">Download</a>
-        </div>
-        <div class="card">
-          <img src="https://i.imgur.com/jLNGand.png" alt="Arceus X VNG Executor" />
-          <h3>Arceus X VNG</h3>
-          <p>Executor VNG do Arceus X, ideal para dispositivos móveis com suporte a scripts .lua.</p>
-          <a href="https://i-n.tech/?p=73294" class="download-button">Download</a>
-        </div>
-        <div class="card">
-          <img src="https://i.imgur.com/OikoYqu.png" alt="Cryptic VNG Executor" />
-          <h3>Cryptic VNG</h3>
-          <p>Versão VNG do Cryptic, segura e otimizada para execução de scripts complexos.</p>
-          <a href="https://i-n.tech/?p=73279" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/folder/8fw68avzcwc1o/Frostware+LITE" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -529,4 +502,4 @@
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
-            </html>
+</html>
