--- a/index.html
+++ b/index.html
@@ -323,37 +323,37 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://www.mediafire.com/file/dczslp3jffolfna/Delta-2.679.762.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/xwlef807kbfpa3z/Delta-2.681.805.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
           <h3>Ronix Executor</h3>
           <p>Executor atualizado com suporte robusto para scripts e desempenho otimizado.</p>
-          <a href="https://www.mediafire.com/file/5axrhhnx1aa43fm/Ronix_679.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/akgxpcaz8q33s6d/Ronix_682.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.mediafire.com/file/68rvz85r634ptuo/krnl_release_2.679.762_2025.6.29_34.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/3xpk1tjfo3m90jd/krnl_release_2.681.805_2025.7.14_37.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
-          <a href="https://www.mediafire.com/file/ggqgzs7jakeasdt/Fluxus.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/egfruojy050pskk/Fluxus.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://www.mediafire.com/file/64o0d41dowb7cef/Codex_2.679.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/nlm86ppvpds7yad/Codex__v2.680.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://www.mediafire.com/file/b3mn7i3y9yi23q0/Roblox_Arceus_X_NEO_1.7.3.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/e3scuf19b9vbz3i/Roblox_Arceus_X_NEO_1.7.4.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
@@ -371,7 +371,7 @@
           <img src="https://i.imgur.com/Org2fLu.png" alt="Frostware Executor" />
           <h3>Frostware Executor</h3>
           <p>Executor estável com recursos exclusivos para melhor desempenho.</p>
-          <a href="https://www.mediafire.com/file/kkpieek0eupp21w/Frostware-GenX+V3.3.apk/file?hash=WkX7rDRhhD3c7hMuKO5juIzWQDMKod3fQhpniZPUEhS7D6jX5r6QJLqG6tTQ77UP" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/mvf7nt4wjuxzpbx/Frostware-GenX+V3.5(fixed).apk/file?hash=TaUNZKl8qqlAKEtHJ5JGzXXGHAtL0BZq5kZ1Q0sQywRX3hXqEjr5EysQsPkM6srS" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
@@ -383,7 +383,7 @@
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
           <h3>Cryptic Executor</h3>
           <p>Executor seguro com recursos otimizados para execução de scripts em vários jogos.</p>
-          <a href="https://www.mediafire.com/file/t9x52nxbu3z0gtw/Cryptic_2.679.762_APK.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/5terxylq72hlsr7/Cryptic_2.681.805_APK.apk/file" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -502,4 +502,4 @@
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
-</html>
+  </html>
