--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://www.mediafire.com/file/xwlef807kbfpa3z/Delta-2.681.805.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/scp0om4fyjwpbh8/Delta-2.683.775-01.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -335,7 +335,7 @@
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.mediafire.com/file/3xpk1tjfo3m90jd/krnl_release_2.681.805_2025.7.14_37.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/bhm733laocs2btu/krnl_release_2.683.775_2025.7.28_38.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
@@ -353,7 +353,7 @@
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
           <h3>Arceus X</h3>
           <p>Um dos executores mais usados em dispositivos móveis para scripts .lua.</p>
-          <a href="https://www.mediafire.com/file/e3scuf19b9vbz3i/Roblox_Arceus_X_NEO_1.7.4.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/1t0fuzh63it641m/Roblox_Arceus_X_NEO_1.7.5.apk/file" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Oh8fTlk.png" alt="Vega X" />
@@ -383,7 +383,7 @@
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
           <h3>Cryptic Executor</h3>
           <p>Executor seguro com recursos otimizados para execução de scripts em vários jogos.</p>
-          <a href="https://www.mediafire.com/file/5terxylq72hlsr7/Cryptic_2.681.805_APK.apk/file" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/w4f7a2ezsa0sio3/Cryptic+2.683.775+APK.apk/file" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -502,4 +502,4 @@
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
-  </html>
+          </html>
