--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://www.mediafire.com/file/scp0om4fyjwpbh8/Delta-2.683.775-01.apk/file" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/bIVx5ej9ol" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
@@ -335,19 +335,19 @@
           <img src="https://i.imgur.com/1X1YnVl.png" alt="KRNL" />
           <h3>KRNL Executor</h3>
           <p>Popular executor gratuito com suporte para vários jogos.</p>
-          <a href="https://www.mediafire.com/file/bhm733laocs2btu/krnl_release_2.683.775_2025.7.28_38.apk/file" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/QppGdBtI6a" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Sewebzr.png" alt="FLUXUS" />
           <h3>Fluxus Android</h3>
           <p>Executor .lua para dispositivos móveis com interface simples.</p>
-          <a href="https://www.mediafire.com/file/egfruojy050pskk/Fluxus.apk/file" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/bd5wMlMpos" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/4V7OLei.png" alt="Codex Executor" />
           <h3>Codex Executor</h3>
           <p>Executor moderno com suporte a múltiplas APIs e atualizações constantes.</p>
-          <a href="https://www.mediafire.com/file/nlm86ppvpds7yad/Codex__v2.680.apk/file" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/eiNJxRBqt2" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/7v8eIYm.png" alt="Arceus Executor" />
@@ -365,13 +365,13 @@
           <img src="https://i.imgur.com/RdWxAXl.png" alt="Evon Executor" />
           <h3>Evon Executor</h3>
           <p>Executor poderoso com interface intuitiva e suporte a scripts avançados.</p>
-          <a href="https://www.mediafire.com/file/yk3aq47d5wxcxtn/Evon.apk/file" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/1PeaRl0efO" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/Org2fLu.png" alt="Frostware Executor" />
           <h3>Frostware Executor</h3>
           <p>Executor estável com recursos exclusivos para melhor desempenho.</p>
-          <a href="https://www.mediafire.com/file/mvf7nt4wjuxzpbx/Frostware-GenX+V3.5(fixed).apk/file?hash=TaUNZKl8qqlAKEtHJ5JGzXXGHAtL0BZq5kZ1Q0sQywRX3hXqEjr5EysQsPkM6srS" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/KuwgW0fN30" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/EKx61Zo.png" alt="Trigon Executor" />
@@ -383,7 +383,7 @@
           <img src="https://i.imgur.com/FKYpAXU.png" alt="Cryptic Executor" />
           <h3>Cryptic Executor</h3>
           <p>Executor seguro com recursos otimizados para execução de scripts em vários jogos.</p>
-          <a href="https://www.mediafire.com/file/w4f7a2ezsa0sio3/Cryptic+2.683.775+APK.apk/file" class="download-button">Download</a>
+          <a href="https://www.linkscurtos.com/URIAc1vKDD" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -502,4 +502,4 @@
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
-          </html>
+            </html>
