--- a/index.html
+++ b/index.html
@@ -397,13 +397,13 @@
           <img src="https://i.imgur.com/HzKgECg.png" alt="Delta Lite Executor" />
           <h3>Delta Lite</h3>
           <p>Versão leve do Delta Executor, ideal para dispositivos com menos recursos.</p>
-          <a href="https://www.mediafire.com/folder/8r62cbyw5i142/DELTA+LITE" class="download-button">Download</a>
+          <a href="https://ksl-technologies.net/?p=15347" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/jfujlYl.png" alt="Fluxus Lite Executor" />
           <h3>Fluxus Lite</h3>
           <p>Executor leve para Android, otimizado para desempenho em dispositivos básicos.</p>
-          <a href="https://www.mediafire.com/folder/p6h81na49oxau/Fluxus+lite" class="download-button">Download</a>
+          <a href="https://ksl-technologies.net/?p=15348" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/DPL0Ztw.png" alt="Evon Lite Executor" />
@@ -415,13 +415,13 @@
           <img src="https://i.imgur.com/ESRQ81S.png" alt="Krnl Lite Executor" />
           <h3>Krnl Lite</h3>
           <p>Versão simplificada do Krnl, ideal para dispositivos com menor capacidade de processamento.</p>
-          <a href="https://www.mediafire.com/folder/ae78c0q5oabze/KRNL+LITE" class="download-button">Download</a>
+          <a href="https://ksl-technologies.net/?p=15349" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/b6wRgCZ.png" alt="Frostware Lite Executor" />
           <h3>Frostware Lite</h3>
           <p>Versão leve do Frostware, projetada para oferecer estabilidade em dispositivos básicos.</p>
-          <a href="https://www.mediafire.com/folder/8fw68avzcwc1o/Frostware+LITE" class="download-button">Download</a>
+          <a href="https://ksl-technologies.net/?p=15350" class="download-button">Download</a>
         </div>
       </div>
     </section>
@@ -502,4 +502,4 @@
     document.getElementById('executors').classList.add('active');
   </script>
 </body>
-            </html>
+  </html>
