--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@
           <img src="https://i.imgur.com/nQwZknY.png" alt="Delta Executor" />
           <h3>Delta Executor</h3>
           <p>Executor confiável com suporte para scripts avançados e interface otimizada.</p>
-          <a href="https://www.linkscurtos.com/bIVx5ej9ol" class="download-button">Download</a>
+          <a href="https://www.mediafire.com/file/iu4zhxjzo1b6v62/Delta-2.684.688-01" class="download-button">Download</a>
         </div>
         <div class="card">
           <img src="https://i.imgur.com/9gsfVl9.jpeg" alt="Ronix Executor" />
